--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
     </div>
     <section class="sec">
         <div class="cricon">
-        <p id="tx1">Tarefas Criadas</p>
-        <p id="tx2">Concluidas</p>
+            <p id="tx1">Tarefas Criadas</p>
+            <p id="tx2">Concluidas</p>
+        </div>
+
+        <div class="tasklist">
+            <p id="clip"><img src="assets/Clipboard.svg" alt="clipboard"></p>
+            <p id="sub1"></p>
+            <p id="sub2"></p>
         </div>
     </section>
 </body>
