--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="inputbox">
         <input id="inputTask" type="text" placeholder="adicione uma nova tarefa">
-        <button class="btn-add">Criar<img src="assets/plus.svg" alt="plus"></button>
+        <button id="btn-add">Criar<img src="assets/plus.svg" alt="plus"></button>
     </div>
     <section class="sec">
         <div class="cricon">
@@ -22,11 +22,23 @@
             <p id="tx2">Concluidas</p>
         </div>
 
-        <div class="tasklist">
+        <div class="start-message">
             <p id="clip"><img src="assets/Clipboard.svg" alt="clipboard"></p>
             <p id="sub1"></p>
             <p id="sub2"></p>
         </div>
+        <div id="taskList" class="taskList">
+            <div class="item">
+                <div class="item-icon"> <img src="assets/Vector.svg" alt="circle"></div>
+                <div class="item-name">jogar bola</div>
+                <div class="item-delete"> <img src="assets/Delete.svg" alt="delete"></div>
+            </div>
+        </div>
     </section>
+    
+    <main id="areaList">
+
+    </main>
+    <script src="control.js"></script>
 </body>
 </html>
